almost done, still need to work on some things

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Jevon Cochran Digital Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,73 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </nav>
+  
+  <section class="top">
+      <image src="images/me-in-Quibdo.jpg" alt="">
+      <container class="title-container">
+        <h1>Jevon Cochran</h1>
+        <h2>Wannabe Web Dev</h2>
+      </container>
+      <h4>Technology is (currently) the bane of my existence!</h4>
+      <p>I'm currently a student at Lambda struggling like a MF. But in about 9 months, I'll be hireable. Employers, put your bid in now!</p>
+      <button>
+        <a href="#">Why Not?</a>
+      </button>
+      </section>
+
+  <section class="middle">
+    <container class="middle-container1">
+      <h2>Listen Up...</h2>
+      <p>I may not know shit now and every session in front of my laptop may have me on the verge of a nervous breakdown but one day, I'll be as poppin' and confident as the image above!</p>
+    </container>
+    <container class="middle-container2">
+      <h3>Stuff I'm Good At:</h3>
+      <ul>
+        <li>Disintegrating into a ball of stress</li>
+        <li>Spending hours trying to figure something out to no avail</li>
+        <li>Banging my head against the wall</li>
+        <li>Coming this close to breaking my keyboard like the guy in the Lambda promo video</li>
+        <li>Cursing at the top of my lungs</li>
+      </ul>
+    </container>
+  </section>
+
+  <section class="bottom">
+    <h2>Work History</h2>
+    <table>
+        <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>ONE</td>
+            <td>DAY</td>
+            <td>I</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>WON'T</td>
+            <td>SUCK</td>
+            <td>AS</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>MUCH</td>
+            <td>PLEASE</td>
+            <td>UNDERSTAND</td>
+          </tr>
+    </table>
+  </section>
+
+  <footer>Copyright Misery 2019</footer>
 </body>
 </html>
